--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Web site created using create-react-app" />
   <meta name="google-site-verification" content="Ag6QVvEmVt0kjmErWAWxDMIRp6ZFf2DQI-C6cd_OSyo" />
+  <meta name="google-site-verification" content="hgoAO3WHkDWR6F-bCExdA_ZR0oT_otI9IXX4gUtrDHw" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
   <style>
     *{
