--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -16,6 +16,8 @@
     @import url('https://fonts.googleapis.com/css2?family=Cookie&family=Montserrat:ital,wght@0,100;0,200;0,400;1,100;1,200;1,400&family=Poppins:ital,wght@0,100;0,200;1,100&family=Roboto:ital,wght@0,100;0,300;0,500;1,700&family=Satisfy&display=swap');
     </style>
   <title>Afrikan Accent Adventures</title>
+  <script src="https://cdn.botpress.cloud/webchat/v0/inject.js"></script>
+  <script src="https://mediafiles.botpress.cloud/e159f9af-ca6c-496c-a97b-0b26ac18ade2/webchat/config.js" defer></script>
 </head>
 
 <body>
